<resources>
    <string name="app_name">FreeDemy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="freedemy_user">Utilisateur FreeDemy</string>
    <string name="nav_header_subtitle">user@freedemy.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">A propos de FreeDemy</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_confirm_password_hint">Confirmer votre mot de passe</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_user_settings">Paramètres</string>
    <string name="content_description_media">freedemy_logo</string>
    <string name="freedemyLAbel">FreeDemy</string>
    <string name="devise">Apprendre gratuitement et librement</string>
    <string name="copyright">Projet mobile - ETU000610</string>
    <string name="notificationTitle">FreeDemy</string>
    <string name="default_notification_channel_id">FREEDEMY2.0</string>
    <string name="parametre">Paramètres</string>
    <string name="modifier_detail">Votre adresse mail</string>
    <string name="profil">Mon profil</string>
    <string name="modifier_profil">Modifier mon pseudo</string>
    <string name="changer_mot_de_passe">Changer mon mot de passe</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="moi">Moi</string>
    <string name="recherche_menu">Recherche</string>
    <string name="home_menu">Accueil</string>
    <string name="cours_menu">Mes cours</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_search">Recherche</string>
    <string name="apprendre_video">Apprendre en vidéo</string>
    <string name="voir_tout">Voir tout</string>
    <string name="etudiez">Étudiez à tout moment, n\'importe où et n\'importe quand</string>
    <string name="apprenez">Apprenez à votre rythme.</string>
    <string name="top_cours">Derniers cours</string>
    <string name="aucun_cours">Aucun cours à afficher pour le moment. Veuillez rafraichir ou essayer ulterieurement.</string>
    <string name="aucun_resultat">Aucun résultat n\'a été trouvé. Essayer avec un différent mot clé.</string>
    <string name="aucun_video">Aucune vidéo à afficher pour le moment. Veuillez rafraichir ou essayer ulterieurement.</string>
    <string name="chargement">Chargement en cours...</string>
    <string name="detail_cours">Détails du cours</string>
    <string name="erreur_chargement_cours">Nous ne parvenons pas à charger le cours pour moment. Réessayer plus tard</string>
    <string name="video_support">Vidéo support</string>
    <string name="search_keyword_hint">Entrer un mot clé (&gt; 3 caractères)</string>
</resources>