<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBodyColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        android:paddingTop="0dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileCircleImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/imageBorderColor"
                android:src="@drawable/user"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/usernameTextView"
                style="@style/viewParent.headerText"
                android:text="@string/freedemy_user"
                android:textSize="18sp"
                android:layout_toRightOf="@id/profileCircleImageView"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/mailTextView"
                style="@style/viewParent.headerText"
                android:text="@string/modifier_detail"
                android:textSize="16sp"
                android:textColor="#5D5C5C"
                android:layout_below="@id/usernameTextView"
                android:layout_toRightOf="@id/profileCircleImageView"/>

        </RelativeLayout>

        <Switch
            android:id="@+id/darkModeSwitch"
            style="@style/settingsText"
            android:drawableLeft="@drawable/ic_dark_mode"
            android:text="Mode sombre" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/profil"/>

        <TextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_edit_profile"
            android:text="@string/modifier_profil" />

        <TextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_edit_password"
            android:layout_marginTop="10dp"
            android:text="@string/changer_mot_de_passe" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="Plus"/>


        <TextView
            android:id="@+id/logoutTextView"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_logout"
            android:text="@string/deconnexion" />


        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/copyright"
            android:textAlignment="center"/>

    </LinearLayout>
</ScrollView>