<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.cours.CoursActivity"
    style="@style/parent.contentLayout">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:minHeight="100dp"
                    app:cardBackgroundColor="@color/designMainColor"
                    app:cardCornerRadius="16dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/titre_details_cours"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/apprenez"
                                android:textColor="@color/whiteBodyColor"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/description_details_cours"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:text="@string/etudiez"
                                android:textColor="@color/whiteBodyColor"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    style="@style/viewParent.headerText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/detail_cours" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/loading_cours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/loading_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <pl.droidsonroids.gif.GifImageView
                            android:id="@+id/loading_spinner"
                            android:layout_width="35dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            android:cropToPadding="true"
                            android:maxWidth="70dp"
                            android:maxHeight="70dp" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/chargement"
                            android:textColor="@color/miniDescription"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:maxLines="3"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/aucun_cours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/erreur_chargement_cours"
                    android:textColor="@color/miniDescription"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:maxLines="3"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contenu_cours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/miniDescription"
                    android:textSize="15sp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    style="@style/viewParent.headerText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/video_support" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
