<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:paddingTop="0dp"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextRecherche"
                        style="@style/searchEditText"
                        android:inputType="text"
                        android:maxLines="1"
                        android:hint="@string/search_keyword_hint"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/liste_cours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="10dp"
                tools:layout_editor_absoluteX="10dp">

                <include layout="@layout/cours_item_list" />
            </androidx.core.widget.NestedScrollView>


            <LinearLayout
                android:id="@+id/loading_cours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/loading_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <pl.droidsonroids.gif.GifImageView
                            android:id="@+id/loading_spinner"
                            android:layout_width="35dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            android:cropToPadding="true"
                            android:maxWidth="70dp"
                            android:maxHeight="70dp" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/chargement"
                            android:textColor="@color/miniDescription"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:maxLines="3"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/aucun_cours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:maxLines="3"
                    android:text="@string/aucun_resultat"
                    android:textColor="@color/miniDescription"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>